# fakenewsnet

./: .gitignore  README.md  pyproject.toml
analysis_results/: analysis_report.md
src/fakenewsnet/: __init__.py  train.py
src/fakenewsnet/analysis/: analyze.py
src/fakenewsnet/data/: __init__.py  loader.py
src/fakenewsnet/models/: __init__.py  graph_model.py
src/fakenewsnet/utils/: __init__.py  metrics.py
