[project]
name = "fakenewsnet"
version = "0.1.0"
description = "Fake News Detection Using Propagation Graphs"
authors = [
    {name = "Mohammadreza Hosseini"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "networkx (>=3.5,<4.0)",
    "transformers (>=4.30.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

